Automatic releases (#2)
updated plugin versions, added release plugin, trying new CI workflow

Co-authored-by: Jarosław Pałka <jaroslaw.palka@symentis.pl>