@@ -33,6 +33,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <organization>
+        <url>https://egolang.codes</url>
+    </organization>
+
+    <scm>
+        <url>https://github.com/symentispl/ego-lang</url>
+        <connection>scm:git:git@github.com:symentispl/ego-lang.git</connection>
+        <developerConnection>scm:git:git@github.com:symentispl/ego-lang.git</developerConnection>
+    </scm>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -70,7 +80,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.10.1</version>
                     <configuration>
                         <release>17</release>
                         <compilerArgs>--enable-preview</compilerArgs>
@@ -78,21 +88,27 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
+                    <version>3.0.0-M5</version>
                     <configuration>
                         <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>3.0.0-M6</version>
+                </plugin>
+                <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
-                    <version>3.0</version>
+                    <version>4.1</version>
                     <configuration>
                         <header>src/misc/APACHE-2.txt</header>
                         <excludes>
                             <exclude>.mvn/</exclude>
                             <exclude>mvnw</exclude>
                             <exclude>mvnw.cmd</exclude>
+                            <exclude>**/*.md</exclude>
                         </excludes>
                         <properties>
                             <project.inceptionYear>2020</project.inceptionYear>
@@ -108,6 +124,27 @@
         </pluginManagement>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.1.0</version>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.8.2</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <executions>
@@ -117,28 +154,6 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <id>run-repl</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>--enable-preview</argument>
-                                <argument>-cp</argument>
-                                <classpath/>
-                                <argument>segfault.ego.repl.Main</argument>
-                            </arguments>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
